# protobufs

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  build.rs  conanfile.py
.github/workflows/: build.yml  ci.yml  publish.yml
share/proto/quasar/relay/datagrams/: nav.proto  shell.proto  status.proto
share/proto/quasar/relay/services/: license.proto  nav.proto  serialnumber.proto  shell.proto  status.proto
src/: lib.rs
src/types/: euler_angles.rs  uuid.rs
