[package]
name = "quasar-protobufs"
version = "0.2.0"
authors = ["whs31 <ryazantsev.dl@edu.spbstu.ru>"]
keywords = ["protocol", "protobuf"]
edition = "2024"
publish = true

[dependencies]
anyhow = "1.0.100"
uuid = "1.18.0"
chrono = { version = "0.4", features = ["clock"] }

prost = "0.14.1"
prost-types = "0.14.1"
tonic = "0.14.1"
tonic-prost = "0.14.1"
mint = "0.5.9"

[build-dependencies]
tonic-build = "0.14.1"
tonic-prost-build = "0.14.1"