[package]
name = "quasar_protobufs"
version = "0.3.2"
authors = ["whs31 <whs31@github.io>"]
keywords = ["protocol", "protobuf"]
edition = "2024"
publish = true

[features]
default = []
grpc = ["dep:tonic", "dep:tonic-prost"]
client = ["grpc"]
server = ["grpc"]

[dependencies]
anyhow = "1.0.100"
uuid = "1.18.0"
chrono = { version = "0.4", features = ["clock"] }

prost = { version = "0.14.1", features = ["default"] }
prost-types = { version = "0.14.1", features = ["chrono"] }
tonic = { version = "0.14.1", optional = true }
tonic-prost = { version = "0.14.1", optional = true }
mint = "0.5.9"

[build-dependencies]
tonic-build = "0.14.2"
tonic-prost-build = "0.14.2"